--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -14,6 +14,22 @@
         tools:targetApi="31" >
 
         <activity
+            android:name=".RepeatTaskSettActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".NewTaskActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".PlansActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".OptionToAddNoteActivity"
+            android:exported="false"/>
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
