--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -14,15 +14,23 @@
         tools:targetApi="31" >
 
         <activity
+            android:name=".DiaryActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".NewPlanActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".PlansActivity"
+            android:exported="false"/>
+
+        <activity
             android:name=".RepeatTaskSettActivity"
             android:exported="false"/>
 
         <activity
             android:name=".NewTaskActivity"
-            android:exported="false"/>
-
-        <activity
-            android:name=".PlansActivity"
             android:exported="false"/>
 
         <activity
