--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         tools:targetApi="31" >
 
         <activity
+            android:name=".AllRecordsDiaryActivity"
+            android:exported="false"/>
+
+        <activity
             android:name=".DiaryActivity"
             android:exported="false"/>
 
